# ND-BOT

./: .env  .env.example  .gitignore  Dockerfile  Procfile  README.md  TROUBLESHOOTING.md  admin_handlers.py  bot.db  bot.py  commit_push_2100.sh  context.md  database.py  docker-compose.yml  dump.rdb  lookism.db  main.py  models.py  payments.py  pyproject.toml  requirements.txt  simple_bot.py  start.sh  start_all.sh  task_queue.py  test_yookassa_webhook.py  validators.py  worker.py
#/: pyvenv.cfg
analyzers/: __init__.py  client.py  lookism_metrics.py  metrics.py  report_generator.py
core/: downloader.py  knowledge_base.py  lookism_metrics.py  payments.py  prompts.py  report_logic.py  scheduler.py  states.py  utils.py  validators.py  webhooks.py
core/integrations/: deepseek.py
tests/: __init__.py
создаём/: pyvenv.cfg
←/: pyvenv.cfg
